# Copyright © 2018–2023 Trevor Spiteri

# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved. This file is offered as-is,
# without any warranty.

[package]
name = "fixed"
version = "1.23.0"
description = "Fixed-point numbers"
documentation = "https://docs.rs/fixed"
repository = "https://gitlab.com/tspiteri/fixed"
readme = "README.md"
keywords = ["dsp", "embedded", "fixed", "math", "numerics"]
categories = ["algorithms", "embedded", "mathematics", "no-std"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.61"

[features]
fail-on-warnings = []
serde-str = ["serde", "std", "serde/std"]
std = []

# optional features through optional dependencies:
# arbitrary
# serde

# experimental optional features through optional dependencies:
# borsh
# num-traits

# experimental optional feature
debug-assert-in-release = []

# deprecated
az = []
f16 = []

[dependencies]
az_crate = { version = "1.2", package = "az" }
bytemuck = "1.2"
half = { version = "2", default_features = false }
typenum = "1.14"

[dependencies.arbitrary]
version = "1"
optional = true

[dependencies.num-traits]
version = "0.2.15"
default-features = false
features = ["i128"]
optional = true

[dependencies.serde]
version = "1.0.60"
default-features = false
optional = true

[dependencies.borsh]
version = "0.9.0"
default-features = false
optional = true

[package.metadata.docs.rs]
features = ["arbitrary", "borsh", "num-traits", "serde", "std"]
